<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="toolbar_title" translatable="false">Open Nettest</string>
    <string name="open_location_permission_dialog_label_location_not_permitted">Open Nettest is not allowed to use your location. Would you like to allow Open Nettest to use your location?</string>
    <string name="notification_test_title">Open nettest is running</string>
    <string name="notification_signal_test_text">Open Nettest signal measurement is running in the background</string>
    <string name="text_loop_instruction_1">The loop mode option for technically interested users allows the automatic repetition of Open Nettest. The first test starts right after activation of the loop-modus; further tests are carried out when either the waiting time has elapsed or the specified distance has been covered. Tests will be performed until the configured number of tests has been reached. The signal strength is measured continuously, also between two tests. The loop-modus can be stopped at any time respectively it stops after 48 hours. It needs to be explicitly pointed out that due to the loop mode it cannot be excluded that the tester is identified.</string>
    <string name="loop_mode_finished">Open Nettest loop mode finished!</string>
    <string name="text_terms_agree">I agree with Specure’s privacy policy and terms of use for Open Nettest.</string>
    <string name="text_home_run">Run Speed Measurement</string>
    <string name="text_basic_measurement">Speed measurement</string>
    <string name="basic_result_title">Basic Result</string>
    <string name="test_bottom_test_status_jitter">Jitter</string>
    <string name="test_packet_loss">Packet loss</string>
    <string name="unit_mbps" translatable="false">Mbps</string>
    <string name="unit_ms" translatable="false">ms</string>
    <string name="unit_percents" translatable="false">%</string>
    <string name="menu_button_title_page">Home</string>
    <string name="menu_button_history">History</string>
    <string name="menu_button_statistics">Statistics</string>
    <string name="menu_button_map">Map</string>
    <string name="dialog_title_error">Error</string>
    <string name="error_unknown">Poor connection. Please try again later</string>
    <string name="no_internet_connection_not_load_data">No Internet connection. Could not load data.</string>
    <string name="home_attention">Attention</string>
    <string name="home_no_internet_connection">No Internet connection!</string>
    <string name="home_no_internet_connection_details">No test is possible.</string>
    <string name="home_signal_value">%1$d dBm</string>
    <string name="home_wifi">WLAN</string>
    <string name="public_ip_address">Public address</string>
    <string name="private_ip_address">Private address</string>
    <string name="preferences_information">Information</string>
    <string name="options">Settings</string>
    <string name="preferences_general_settings">General</string>
    <string name="preferences_terms_of_service">Terms of Service</string>
    <string name="preferences_loop_test_count">Number of Measurements</string>
    <string name="loop_mode_clarification">When loop mode is enabled, new tests are automatically performed after the configured waiting time or when the device moves more than the configured distance.</string>
    <string name="preferences_privacy">Privacy</string>
    <string name="preferences_persistent_clientUUID">Persistent Client UUID</string>
    <string name="preferences_persistent_clientUUID_summary">Persistent Client UUID is needed to enable measurement history and synchronisation of the results between devices</string>
    <string name="preferences_analytics">Analytics</string>
    <string name="preferences_analytics_summary">Enable analytics and send crash traces to us</string>
    <string name="preferences_location_summary">Manage the permissions regarding the location tracking</string>
    <string name="preferences_loop_test_number">Select the number of tests</string>
    <string name="preferences_version">Version</string>
    <string name="preferences_qos_measurement">QoS measurement</string>
    <string name="preferences_location">Location</string>
    <string name="preferences_loop_mode">Loop mode</string>
    <string name="preferences_loop_mode_summary">New test after waiting time or covering the distance. Max. 2 days</string>
    <string name="preferences_loop_mode_min_delay">Waiting time (in minutes)</string>
    <string name="preferences_loop_mode_max_movement">Distance (in meters)</string>
    <string name="preferences_expert_mode">Expert mode</string>
    <string name="preferences_expert_mode_summary">Show advanced settings and information</string>
    <string name="preferences_ipv4_only">IPv4 only</string>
    <string name="preferences_ipv4_only_sum">Do not use IPv6</string>
    <string name="preferences_radio_info">Radio info</string>
    <string name="preferences_radio_info_sum">Details on radio configuration</string>
    <string name="preferences_client_uuid">Client UUID</string>
    <string name="preferences_about">About</string>
    <string name="preferences_data_protection">Privacy policy</string>
    <string name="preferences_enter_code">Please enter the code</string>
    <string name="preferences_developer_control_server">Control server</string>
    <string name="preferences_override_control_server">Override control server</string>
    <string name="preferences_override_control_server_sum">Activate custom control server settings</string>
    <string name="preferences_override_control_server_host">Control host</string>
    <string name="preferences_override_control_server_port">Control port</string>
    <string name="preferences_override_control_server_ssl">Control SSL</string>
    <string name="preferences_override_control_server_ssl_sum">Use encrypted connection to control server</string>
    <string name="preferences_developer_options_disabled">Developer options disabled</string>
    <string name="preferences_developer_options_available">Developer options available</string>
    <string name="preferences_developer_try_again">Try again!</string>
    <string name="preferences_developer_map_server">Map server</string>
    <string name="preferences_developer_map_override">Override map server</string>
    <string name="preferences_developer_map_override_sum">Activate custom map server settings</string>
    <string name="preferences_developer_map_host">Map host</string>
    <string name="preferences_developer_map_port">Map port</string>
    <string name="preferences_developer_map_ssl">Map server SSL</string>
    <string name="preferences_developer_map_ssl_sum">Use encrypted connection to map server</string>
    <string name="preferences_category_developer_qos_server">QoS server</string>
    <string name="preferences_developer_qos_ssl">QoS server SSL</string>
    <string name="preferences_developer_qos_ssl_sum">Use encrypted connection to QoS server</string>
    <string name="preferences_all_disabled">Deactivated.</string>
    <string name="preferences_server_selection">Server selection</string>
    <string name="preferences_default_server_selection" />
    <string name="label_server_selection">Server selection</string>
    <string name="preferences_tag">Tag</string>
    <string name="location_dialog_label_title">Location</string>
    <string name="location_dialog_label_position">Position</string>
    <string name="location_dialog_label_accuracy">Accuracy</string>
    <string name="location_dialog_label_age">Age</string>
    <string name="location_dialog_label_source">Source</string>
    <string name="location_dialog_label_altitude">Altitude</string>
    <string name="location_dialog_label_speed">Speed</string>
    <string name="location_dialog_label_satellites">Satellites</string>
    <string name="location_dialog_label_location_progress_message">Determining location, please wait…</string>
    <string name="open_gps_setting_dialog_label_gps_not_enabled">Location services are not enabled. Would you like to modify location settings?</string>
    <string name="open_gps_setting_dialog_label_open_gps_setting">Open location settings</string>
    <string name="open_gps_setting_dialog_label_cancel">Cancel</string>
    <string name="location_dialog_not_available">Not available</string>
    <string name="location_dialog_age">%1$s s</string>
    <string name="location_dialog_accuracy">%1$s m</string>
    <string name="location_dialog_speed">%1$s km/h</string>
    <string name="location_dialog_position" translatable="false">%1$s %2$s</string>
    <string name="location_location_direction_n">N %1$s</string>
    <string name="location_location_direction_e">E %1$s</string>
    <string name="location_location_direction_s">S %1$s</string>
    <string name="location_location_direction_w">W %1$s</string>
    <string name="open_location_permission_dialog_label_open_permission_setting">Open application settings</string>
    <string name="text_ip_address_not_available">Address is not available</string>
    <string name="input_setting_dialog_ok">OK</string>
    <string name="input_setting_dialog_cancel">Cancel</string>
    <string name="loop_mode_max_delay_invalid" tools:ignore="PluralsCandidate">Please choose a number between %1$d and %2$d.</string>
    <string name="about_client_uuid_copied">Client UUID has been copied to clipboard.</string>
    <string name="client_not_registered">App is not registered, try again later.</string>
    <string name="history_item_header_down">Download</string>
    <string name="history_item_header_up">Upload</string>
    <string name="history_item_header_ping">Ping</string>
    <string name="title_sync">Synchronization</string>
    <string name="text_sync_info">You have the possibility to join results from different devices. To do so, you have to enter an already requested synchronisation code or request a new one.</string>
    <string name="button_sync_request_code">Request Code</string>
    <string name="button_sync_enter_code">Enter Code</string>
    <string name="title_permissions_accuracy" tools:ignore="MissingTranslation">Open Nettest Accuracy</string>
    <string name="text_permissions_accuracy" tools:ignore="MissingTranslation">Open Nettest needs certain functionality to operate correctly.</string>
    <string name="text_permissions_accuracy_phone" tools:ignore="MissingTranslation">We will never make or manage phone calls. We use phone permissions to identify the mobile operator used for testing.</string>
    <string name="title_permissions_accuracy_phone" tools:ignore="MissingTranslation">Phone Permissons</string>
    <string name="title_permissions_accuracy_location" tools:ignore="MissingTranslation">Location Permissons</string>
    <string name="text_permissions_accuracy_location" tools:ignore="MissingTranslation">Your location identifies nearby servers and your device\'s cellular connection in order to properly configure Open Nettest</string>
    <string name="button_continue" tools:ignore="MissingTranslation">Continue</string>
    <string name="title_permissions_signal" tools:ignore="MissingTranslation">Allow network signal scanning</string>
    <string name="text_permissions_signal" tools:ignore="MissingTranslation">Open Nettest would like to periodically check mobile coverage, quality and location data to provide you with operator coverage maps. This data is also collected when the app is closed or not in use in order to create the most accurate map possible.We use phone permissions to identify the mobile operator used for testing.</string>
    <string name="text_permissions_signal_coverage" tools:ignore="MissingTranslation">Anonymised coverage data may be shared with operators to help them improve their networks. Learn more</string>
    <string name="button_not_allow" tools:ignore="MissingTranslation">Do not allow</string>
    <string name="button_allow" tools:ignore="MissingTranslation">Allow</string>
</resources>