<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/corner_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:rotation="30"
            android:src="@drawable/image_permissions"
            android:visibility="invisible"
            app:layout_constraintDimensionRatio="W,4:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_accuracy"
            style="@style/RobotoRegularStyle.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/title_permissions_accuracy"
            android:textColor="@color/text_color_welcome"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/text_accuracy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_top" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_accuracy"
            style="@style/RobotoRegularStyle.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:lineSpacingExtra="4sp"
            android:text="@string/text_permissions_accuracy"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@id/icon_phone"
            app:layout_constraintEnd_toEndOf="@id/label_accuracy"
            app:layout_constraintStart_toStartOf="@id/label_accuracy"
            app:layout_constraintTop_toBottomOf="@id/label_accuracy" />

        <ImageView
            android:id="@+id/icon_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_call"
            app:layout_constraintBottom_toTopOf="@id/label_accuracy_phone"
            app:layout_constraintStart_toStartOf="@id/label_accuracy"
            app:layout_constraintTop_toBottomOf="@id/text_accuracy" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_accuracy_phone"
            style="@style/RobotoRegularStyle.Medium"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:text="@string/title_permissions_accuracy_phone"
            android:textColor="@color/text_color_welcome"
            app:layout_constraintBottom_toTopOf="@id/text_accuracy_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon_phone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_accuracy_phone"
            style="@style/RobotoRegularStyle.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:lineSpacingExtra="4sp"
            android:text="@string/text_permissions_accuracy_phone"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/icon_location"
            app:layout_constraintEnd_toEndOf="@id/label_accuracy"
            app:layout_constraintStart_toStartOf="@id/label_accuracy"
            app:layout_constraintTop_toBottomOf="@id/label_accuracy_phone" />

        <ImageView
            android:id="@+id/icon_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_location_permissions"
            app:layout_constraintBottom_toTopOf="@id/label_accuracy_location"
            app:layout_constraintStart_toStartOf="@id/label_accuracy"
            app:layout_constraintTop_toBottomOf="@id/text_accuracy_phone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_accuracy_location"
            style="@style/RobotoRegularStyle.Medium"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:text="@string/title_permissions_accuracy_location"
            android:textColor="@color/text_color_welcome"
            app:layout_constraintBottom_toTopOf="@id/text_accuracy_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon_location"
            app:layout_constraintVertical_chainStyle="spread" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_accuracy_location"
            style="@style/RobotoRegularStyle.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:lineSpacingExtra="4sp"
            android:text="@string/text_permissions_accuracy_location"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/label_accuracy"
            app:layout_constraintStart_toStartOf="@id/label_accuracy"
            app:layout_constraintTop_toBottomOf="@id/label_accuracy_location" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_run"
            android:paddingStart="40dp"
            android:paddingTop="20dp"
            android:paddingEnd="40dp"
            android:paddingBottom="20dp"
            android:text="@string/button_continue"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>