<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/RobotoMediumStyle.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_sync"
            android:layout_marginTop="60dp"
            android:textColor="@color/text_gray"
            app:layout_constraintBottom_toTopOf="@id/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_sync_start"
            app:layout_constraintBottom_toTopOf="@id/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text"
            style="@style/RobotoRegularStyle.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_sync_info"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/text_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonRequestCode"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRequestCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_accent"
            android:paddingStart="40dp"
            android:paddingTop="20dp"
            android:paddingEnd="40dp"
            android:paddingBottom="20dp"
            android:text="@string/button_sync_request_code"
            android:textAllCaps="false"
            android:layout_marginBottom="120dp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEnterCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_white"
            android:paddingStart="40dp"
            android:paddingTop="20dp"
            android:paddingEnd="40dp"
            android:paddingBottom="20dp"
            android:stateListAnimator="@null"
            android:layout_marginTop="16dp"
            android:text="@string/button_sync_enter_code"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:translationZ="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonRequestCode" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>